force-app/main/default/objects/APT_Agreement_Lodgement_Point__c/APT_Agreement_Lodgement_Point__c.object-meta.xml
<CustomObject>
    <label>Agreement Lodgement Point</label>
    <nameField>
        <displayFormat>ALP-{000}</displayFormat>
        <label>Agreement Lodgement Point Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Lodgement Point</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>