force-app/main/default/objects/APT_Agreement_Lodgement_Point__c/fields/APT_Address__c.field-meta.xml
<CustomField>
    <fullName>APT_Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>