force-app/main/default/objects/APT_Agreement_Lodgement_Point__c/fields/APT_Agreement__c.field-meta.xml
<CustomField>
    <fullName>APT_Agreement__c</fullName>
    <label>Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Lodgement Points and Account Numbers</relationshipLabel>
    <relationshipName>Agreement_Lodgement_Point</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>