force-app/main/default/objects/APT_Agreement_Lodgement_Point__c/fields/APT_Agreement_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>APT_Agreement_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement Line Item</label>
    <referenceTo>Apttus__AgreementLineItem__c</referenceTo>
    <relationshipLabel>Agreement Lodgement Point</relationshipLabel>
    <relationshipName>Agreement_Lodgement_Point</relationshipName>
    <type>Lookup</type>
</CustomField>