force-app/main/default/objects/APT_Agreement_Lodgement_Point__c/fields/APT_Charge_Account__c.field-meta.xml
<CustomField>
    <fullName>APT_Charge_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge Account</label>
    <referenceTo>APT_Charge_Account__c</referenceTo>
    <relationshipLabel>Agreement Lodgement Point</relationshipLabel>
    <relationshipName>Agreement_Lodgement_Point</relationshipName>
    <type>Lookup</type>
</CustomField>