force-app/main/default/objects/APT_Agreement_Lodgement_Point__c/fields/APT_DWS_ID__c.field-meta.xml
<CustomField>
    <fullName>APT_DWS_ID__c</fullName>
    <label>DWS ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>