force-app/main/default/objects/APT_Agreement_Lodgement_Point__c/fields/APT_Lodgement_Point_Name__c.field-meta.xml
<CustomField>
    <fullName>APT_Lodgement_Point_Name__c</fullName>
    <formula>APT_Lodgement_Point_Lookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lodgement Point Name</label>
    <type>Text</type>
</CustomField>