force-app/main/default/objects/APT_Agreement_Lodgement_Point__c/fields/APT_LP_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>APT_LP_Post_Code__c</fullName>
    <label>LP Post Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>