force-app/main/default/objects/APT_Agreement_Lodgement_Point__c/fields/APT_Organisation__c.field-meta.xml
<CustomField>
    <fullName>APT_Organisation__c</fullName>
    <label>Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agreement Lodgement Point</relationshipLabel>
    <relationshipName>Agreement_Lodgement_Point</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>