force-app/main/default/objects/APT_Agreement_Lodgement_Point__c/fields/APT_Organisation_ID__c.field-meta.xml
<CustomField>
    <fullName>APT_Organisation_ID__c</fullName>
    <label>Organisation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>