force-app/main/default/objects/APT_Agreement_Lodgement_Point__c/fields/APT_Outlet_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_Outlet_Type__c</fullName>
    <label>Outlet Type</label>
    <length>55</length>
    <type>Text</type>
</CustomField>