force-app/main/default/objects/APT_Agreement_Lodgement_Point__c/fields/APT_Selected_Lodgement_Point__c.field-meta.xml
<CustomField>
    <fullName>APT_Selected_Lodgement_Point__c</fullName>
    <label>Selected Lodgement Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>