force-app/main/default/objects/APT_Agreement_Lodgement_Point__c/fields/APT_Status__c.field-meta.xml
<CustomField>
    <fullName>APT_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>